--- a/spring-mvc3/src/main/resources/i18n/ValidationMessages_ja.properties
+++ b/spring-mvc3/src/main/resources/i18n/ValidationMessages_ja.properties
@@ -10,4 +10,4 @@ Min ={0}は、{1}以上の値を入力してください。
 
 #typeMismatch:個別メッセージ
 typeMismatch.invoice.price ={0}が不正な値です。
-typeMismatch.invoice.paymentDeadline ={0}は、"2020-01-01"形式で入力してください。
+typeMismatch.invoice.paymentdeadline ={0}は、"2020-01-01"形式で入力してください。
