--- a/spring-mvc3/src/main/resources/i18n/ValidationMessages_zh.properties
+++ b/spring-mvc3/src/main/resources/i18n/ValidationMessages_zh.properties
@@ -10,4 +10,4 @@ Min =對於 {0}，輸入一個大於或等於 {1} 的值。
 
 #typeMismatch:個別メッセージ
 typeMismatch.invoice.price ={0} 是無效值
-typeMismatch.invoice.paymentDeadline =以“2020-01-01”格式輸入{0}
+typeMismatch.invoice.paymentdeadline =以“2020-01-01”格式輸入{0}
